[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/UI/InventoryMenu.gd" type="Script" id=1]
[ext_resource path="res://Icons/MenuBackground.png" type="Texture" id=2]
[ext_resource path="res://Themes/50Theme.tres" type="Theme" id=3]
[ext_resource path="res://Fonts/drawersketch30.tres" type="DynamicFont" id=4]
[ext_resource path="res://Themes/30Theme.tres" type="Theme" id=5]
[ext_resource path="res://Icons/Chode.png" type="Texture" id=8]
[ext_resource path="res://Themes/35Theme.tres" type="Theme" id=9]
[ext_resource path="res://Themes/20Theme.tres" type="Theme" id=10]
[ext_resource path="res://Scenes/Buttons/Menu_Button_Tempate.tscn" type="PackedScene" id=11]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 4 )

[node name="Inventory" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullMenu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopMargin" type="Label" parent="FullMenu"]
visible = false
margin_right = 1280.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_vertical = 1

[node name="Header" type="HBoxContainer" parent="FullMenu"]
margin_right = 1280.0
margin_bottom = 82.0
size_flags_horizontal = 3

[node name="LeftMargin2" type="Label" parent="FullMenu/Header"]
margin_right = 20.0
margin_bottom = 82.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="MenuName" type="Label" parent="FullMenu/Header"]
margin_left = 24.0
margin_right = 432.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 3 )
text = "INVENTORY"
align = 1
valign = 1

[node name="Space" type="Label" parent="FullMenu/Header"]
margin_left = 436.0
margin_right = 844.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )

[node name="Exit" parent="FullMenu/Header" instance=ExtResource( 11 )]
margin_left = 848.0
margin_right = 1256.0
margin_bottom = 82.0
Sfx = "Cancel"

[node name="RightMargin2" type="Label" parent="FullMenu/Header"]
margin_left = 1260.0
margin_right = 1280.0
margin_bottom = 82.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="TabsContainer" type="HBoxContainer" parent="FullMenu"]
margin_top = 86.0
margin_right = 1280.0
margin_bottom = 696.0
size_flags_vertical = 3

[node name="LeftMargin" type="Label" parent="FullMenu/TabsContainer"]
margin_right = 20.0
margin_bottom = 610.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="CategoryPanel" type="VBoxContainer" parent="FullMenu/TabsContainer"]
margin_left = 24.0
margin_right = 216.0
margin_bottom = 610.0
rect_min_size = Vector2( 192, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
theme = ExtResource( 5 )

[node name="Weapons" parent="FullMenu/TabsContainer/CategoryPanel" instance=ExtResource( 11 )]
margin_right = 192.0
margin_bottom = 98.0

[node name="Armor" parent="FullMenu/TabsContainer/CategoryPanel" instance=ExtResource( 11 )]
margin_top = 102.0
margin_right = 192.0
margin_bottom = 200.0

[node name="Skills" parent="FullMenu/TabsContainer/CategoryPanel" instance=ExtResource( 11 )]
margin_top = 204.0
margin_right = 192.0
margin_bottom = 302.0

[node name="Consumable" parent="FullMenu/TabsContainer/CategoryPanel" instance=ExtResource( 11 )]
margin_top = 306.0
margin_right = 192.0
margin_bottom = 404.0

[node name="Quest Items" parent="FullMenu/TabsContainer/CategoryPanel" instance=ExtResource( 11 )]
margin_top = 408.0
margin_right = 192.0
margin_bottom = 506.0

[node name="Currency" type="ColorRect" parent="FullMenu/TabsContainer/CategoryPanel"]
margin_top = 510.0
margin_right = 192.0
margin_bottom = 610.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
color = Color( 0, 0, 0, 0.545098 )

[node name="Currency" type="HBoxContainer" parent="FullMenu/TabsContainer/CategoryPanel/Currency"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrencyIcon" type="TextureRect" parent="FullMenu/TabsContainer/CategoryPanel/Currency/Currency"]
margin_bottom = 100.0
size_flags_horizontal = 3
texture = ExtResource( 8 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrencyDisplay" type="Label" parent="FullMenu/TabsContainer/CategoryPanel/Currency/Currency"]
margin_left = 4.0
margin_right = 193.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 9 )
text = "%Chode% "
align = 1
valign = 1

[node name="Weapons" type="ScrollContainer" parent="FullMenu/TabsContainer"]
margin_left = 220.0
margin_right = 862.0
margin_bottom = 610.0
rect_min_size = Vector2( 520, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="FullMenu/TabsContainer/Weapons"]
margin_right = 642.0
margin_bottom = 610.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Armor" type="ScrollContainer" parent="FullMenu/TabsContainer"]
visible = false
margin_left = 220.0
margin_right = 862.0
margin_bottom = 610.0
rect_min_size = Vector2( 520, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="FullMenu/TabsContainer/Armor"]
margin_right = 642.0
margin_bottom = 610.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Skills" type="ScrollContainer" parent="FullMenu/TabsContainer"]
visible = false
margin_left = 543.0
margin_right = 862.0
margin_bottom = 610.0
rect_min_size = Vector2( 520, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="FullMenu/TabsContainer/Skills"]
margin_right = 520.0
margin_bottom = 610.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Consumable" type="ScrollContainer" parent="FullMenu/TabsContainer"]
visible = false
margin_left = 729.0
margin_right = 1234.0
margin_bottom = 610.0
rect_min_size = Vector2( 520, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="FullMenu/TabsContainer/Consumable"]
margin_right = 520.0
margin_bottom = 610.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Quest Items" type="ScrollContainer" parent="FullMenu/TabsContainer"]
visible = false
margin_left = 729.0
margin_right = 1234.0
margin_bottom = 609.987
rect_min_size = Vector2( 520, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="FullMenu/TabsContainer/Quest Items"]
margin_right = 520.0
margin_bottom = 609.987
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="FullMenu/TabsContainer"]
margin_left = 866.0
margin_right = 876.0
margin_bottom = 610.0
rect_min_size = Vector2( 10, 0 )
size_flags_vertical = 3

[node name="ItemInspector" type="VBoxContainer" parent="FullMenu/TabsContainer"]
margin_left = 880.0
margin_right = 1255.0
margin_bottom = 610.0
rect_min_size = Vector2( 375, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item_Inspector_Container" type="VBoxContainer" parent="FullMenu/TabsContainer/ItemInspector"]
margin_right = 375.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemName" type="Label" parent="FullMenu/TabsContainer/ItemInspector/Item_Inspector_Container"]
margin_right = 375.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 9 )
align = 1
valign = 1
autowrap = true

[node name="ItemDescription" type="Label" parent="FullMenu/TabsContainer/ItemInspector/Item_Inspector_Container"]
margin_top = 61.0
margin_right = 375.0
margin_bottom = 95.0
size_flags_vertical = 1
theme = ExtResource( 10 )
autowrap = true

[node name="SpaceBuffer" type="Label" parent="FullMenu/TabsContainer/ItemInspector/Item_Inspector_Container"]
margin_left = 187.0
margin_top = 99.0
margin_right = 187.0
margin_bottom = 133.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 4
theme = ExtResource( 10 )

[node name="ItemStats" type="HBoxContainer" parent="FullMenu/TabsContainer/ItemInspector/Item_Inspector_Container"]
margin_top = 137.0
margin_right = 375.0
margin_bottom = 568.0
size_flags_vertical = 3

[node name="StatsContainer" type="ScrollContainer" parent="FullMenu/TabsContainer/ItemInspector/Item_Inspector_Container/ItemStats"]
margin_right = 375.0
margin_bottom = 431.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Stats" type="VBoxContainer" parent="FullMenu/TabsContainer/ItemInspector/Item_Inspector_Container/ItemStats/StatsContainer"]
margin_right = 375.0
margin_bottom = 431.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )

[node name="ItemIcon" type="TextureRect" parent="FullMenu/TabsContainer/ItemInspector/Item_Inspector_Container/ItemStats"]
visible = false
margin_left = 230.0
margin_right = 300.0
margin_bottom = 479.0
rect_min_size = Vector2( 70, 70 )
expand = true

[node name="LabelBuffer" type="Label" parent="FullMenu/TabsContainer/ItemInspector"]
margin_top = 572.0
margin_right = 375.0
margin_bottom = 586.0

[node name="Label" type="Label" parent="FullMenu/TabsContainer/ItemInspector"]
margin_top = 590.0
margin_right = 375.0
margin_bottom = 610.0
rect_min_size = Vector2( 0, 20 )

[node name="RightMargin" type="Label" parent="FullMenu/TabsContainer"]
margin_left = 1259.0
margin_right = 1279.0
margin_bottom = 610.0
rect_min_size = Vector2( 20, 0 )
size_flags_vertical = 3

[node name="BottomMargin" type="Label" parent="FullMenu"]
margin_top = 700.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 20 )
size_flags_vertical = 1
